<resources>

    <string name="app_name">Inventory App</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_name">Name</string>
    <string name="editor_save_item_successful">Item saved</string>
    <string name="editor_save_item_failed">Error with saving item</string>
    <string name="empty_view_title_text">Inventory is empty!</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_msg">Delete all items?</string>
    <string name="category_delete_items_successful">All items deleted</string>
    <string name="category_delete_items_failed">Error with deleting all items</string>
    <string name="sale">SALE</string>
    <string name="quantity_label">Quantity:</string>
    <string name="category_quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="category_price">Price</string>
    <string name="category_image">Image</string>
    <string name="product_image_content_description">Product Image</string>
    <string name="image_selection_instructions">Tap to select an image</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_email">Supplier Email</string>
    <string name="order_from_supplier_button_text">ORDER FROM SUPPLIER</string>

</resources>
