<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:labelFor="@+id/edit_item_name"
            android:text="@string/category_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:labelFor="@id/edit_item_quantity"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/edit_item_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_image" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/product_image_content_description"
                android:src="@drawable/ic_add_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_centerHorizontal="true"
                android:text="@string/image_selection_instructions" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:labelFor="@id/edit_item_supplier_name"
            android:text="@string/category_supplier_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_item_supplier_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:labelFor="@id/edit_item_supplier_email"
            android:text="@string/category_supplier_email" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_item_supplier_email"
                style="@style/EditorFieldStyle"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_from_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/order_from_supplier_button_text" />

</LinearLayout>
